# TradingPlatform

./: .dockerignore  .env  .env.example  .flake8  .gitignore  AGENTS.md  CHANGELOG.md  CODE_ATLAS.md  CONTRIBUTING.md  Dockerfile  Makefile  NOTES.md  README.md  RUNBOOK.md  SCHEMAS.md  SUGGESTIONS.md  TASKS.md  WORKFLOW.md  docker-compose.yml  market_data_collector.py  pyproject.toml  requirements.txt  run_daily.py  run_pipeline.sh  tox.ini
.ci/: duplicate-docs.sh
.github/workflows/: ci.yml
collector/: __init__.py  api.py  cli.py  db.py  main.py  stream.py
data/: demo_news.csv  sample_pnl.csv
design/: PLAN_INDEX.md  README.md  architecture-2025-07-22.md  plan-2025-07-22.md  plan-2025-07-23.md  plan-2025-07-24.md  plan-2025-07-25.md  plan-2025-07-26.md  plan-2025-07-27.md  plan-2025-07-28.md  plan-2025-07-29.md  plan-2025-07-31.md  plan-2025-08-05.md
design/2025-07/: plan-2025-07-22.md  plan-2025-07-26.md
design/2025-08/: plan-2025-08-01.md  plan-2025-08-02.md  plan-2025-08-03.md  plan-2025-08-04.md  plan-2025-08-08.md  plan-2025-08-09.md  plan-2025-08-10.md  plan-2025-08-11.md
design/architecture/: ARCH_INDEX.md
design/plans/: P001.md  P002.md  P003.md  P004.md  P005.md  P006.md  P007.md  P008.md  P009.md  P010.md  P011.md  P012.md  P013.md  P014.md  P015.md  P016.md  index.md
devops/: TODO.md
docs/: CHANGELOG.md  README.md  SETUP.md  arch.puml  ui_overview.md
features/: __init__.py  pipeline.py
libs/: TODO.md
models/: __init__.py  exit.py  train.py
planning/: archive.md
playbook/: config.yaml  generate.py
playbooks/: 2025-07-23.json
reports/: __init__.py  dashboard.py  feature_dashboard.py  scoreboard.py  strategy_dashboard.py
scripts/: __init__.py  check_docker_daemon.ps1  check_plan_headers.py  docker_smoke.sh  gen_arch_svg.sh  gen_plan_index.py  generate_pnl_report.py  run_backtest.py  seed_demo.py  update_plan_index.py
services/scheduler/: TODO.md  app.py
services/web/: TODO.md
src/trading_platform/: __init__.py  backtest.py  broker.py  celery_app.py  config.py  db.py  evaluator.py  flow.py  load_env.py  market_data_collector.py  metrics.py  notifier.py  portfolio.py  risk_report.py  run_daily.py  scheduler.py  secret_filter.py  simulate.py  strategies.py  tasks.py  webapp.py
src/trading_platform/collector/: __init__.py  alerts.py  api.py  api_async.py  backfill.py  db.py  delayed_stream.py  logging_utils.py  main.py  pnl.py  portfolio_stream.py  quality.py  seed_scoreboard.py  stream.py  stream_async.py  verify.py
src/trading_platform/features/: __init__.py  pipeline.py
src/trading_platform/models/: __init__.py  train.py
src/trading_platform/playbook/: __init__.py  generate.py
src/trading_platform/reports/: __init__.py  (+5 more)
tasks/: seed_news.py
tests/: conftest.py  test_alerts.py  test_api.py  test_api_async.py  test_api_metrics.py  test_backfill.py  test_backtest.py  test_broker.py  test_config.py  test_dashboard.py  test_db_bootstrap.py  test_delayed_stream.py  test_equity_api.py  test_evaluator.py  test_exit.py  test_feature_dashboard.py  test_features.py  test_features_import.py  test_heartbeat.py  test_load_env.py  test_metrics_api.py  test_models_import.py  test_notifier.py  test_overview_api.py  test_overview_empty_db.py  test_plan_headers.py  test_plan_index.py  test_playbook.py  test_polygon.py  test_polygon_endpoints.py  test_portfolio.py  test_portfolio_stream.py  test_quality.py  test_reports_dir.py  test_reports_import.py  test_risk_report.py  test_root_does_not_500.py  test_run_daily.py  test_run_daily_imports.py  test_scheduler.py  (+14 more)
tests/web/: test_api_routes.py
(+3 files in other folders)
