[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "market-data-collector"
version = "0.1.0"
description = "Polygon market data collector"
authors = [{name="ACME"}]
requires-python = ">=3.8"
readme = "README.md"
dependencies = [
    "requests",
    "websocket-client",
    "aiohttp",
    "pandas",
    "numpy",
    "scikit-learn",
    "lightgbm",
    "arch",
    "pytest-asyncio",
    "websockets",
    "plotly>=5.22",
    "flask",
    "flask-socketio",
    "APScheduler",
    "optuna",
]

[project.scripts]
collect-data = "trading_platform.collector.main:main"
simulate = "trading_platform.simulate:main"
broker = "trading_platform.broker:main"
webapp = "trading_platform.webapp:main"
portfolio = "trading_platform.portfolio:main"
scheduler = "trading_platform.scheduler:main"
risk-report = "trading_platform.risk_report:main"
portfolio-stream = "trading_platform.collector.portfolio_stream:main"
evaluator = "trading_platform.evaluator:main"
backtest = "trading_platform.backtest:main"

[tool.setuptools.packages.find]
where = ["src", ""]
